--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 # SimpleCov report directory
 coverage/*
 /spec/examples.txt
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
