--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,18 @@ gemfile:
   - Gemfile
 before_install:
   - gem update bundler
+install:
+  - bundle install --jobs=3 --retry=3
+  - node -v
+  - nvm install --lts
+  - node -v
+  - npm i -g yarn
+  - bin/yarn
+cache:
+  bundler: true
+  yarn: true
+  directories:
+    - node_modules
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
